--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
         <img src="./images/anabolic-french-toast.jpg"
         width="400"
         height="400">
+        <li><a href="./recipes/Lentils.html">Lentils Recipe</a></li>
 </body>
 </html>
