Add lentils picture

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <img src="./images/anabolic-french-toast.jpg"
         width="400"
         height="400">
-        <li><a href="./recipes/Lentils.html">Lentils Recipe</a></li>
+        <li><a href="./recipes/lentils.html">Lentils Recipe</a></li>
+        <p>A flavorful way to get full and get your protein in.</p>
+        <img src="./images/lentils.jpg"
+        width="400"
+        height="400">
 </body>
 </html>
